# cadutil

./: .gitignore
.github/workflows/: publish-crate.yaml  publish-crate.yml  release.yaml  sync-librecad-libraries.yml
scripts/: build-libs.sh
src/: .gitignore  README.md  build  cadutil  makefile  test.dxf  test.sh
src/cli/: Cargo.toml  README.md  build.rs
src/cli/src/: ffi.rs  main.rs
src/cli/tests/: cli_tests.rs
src/cli/tests/test_fixtures/: empty.dxf  multi_layer.dxf
src/core/: build.zig
src/core/include/: librecad_core.h
src/core/src/: librecad_core.cpp
src/core/test/: circles.dxf  simple_line.dxf  test_core.c
