[package]
name = "cadutil"
version = "2025.12.0"
edition = "2021"
description = "CLI tools for DXF/JWW file conversion, info extraction, and validation"
authors = ["CAD Utility Contributors"]
license = "GPL-2.0-or-later"
repository = "https://github.com/f4ah6o/LibreCAD-cli"
readme = "README.md"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "build.rs",
    "src/**",
    "vendor/**",
]

[[bin]]
name = "cadutil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
colored = "2"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
